# sediman-browse

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RESEARCH_FINDINGS.md  calculate.py  docker-compose.example.yml  docker-compose.yml  package.json  pyproject.toml  test_rust
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: RESEARCH_BROWSER_AGENTS.md  RESEARCH_REWARD_SIGNALS.md
benchmarks/skill_generalization/: tasks.yaml
benchmarks/skill_generalization/mock_server/: generate_pages.py  server.py
benchmarks/skill_generalization/scripts/: evaluate.py  generate_skills.py  record_canonical.py  run_benchmark.py  test_dryrun.py
crates/sediman-tui/: Cargo.toml
crates/sediman-tui-bridge/: Cargo.toml
crates/sediman-tui-bridge/src/: agent.rs  client.rs  lib.rs  memory.rs  scheduler.rs  skills.rs  types.rs
crates/sediman-tui-bridge/tests/: integration_test.rs
crates/sediman-tui-core/: Cargo.toml
crates/sediman-tui-core/src/: lib.rs  markdown.rs
crates/sediman-tui-core/src/command/: fuzzy.rs  mod.rs  registry.rs
crates/sediman-tui-core/src/event/: handler.rs  message.rs  mod.rs
crates/sediman-tui-core/src/input/: completer.rs  editor.rs  mod.rs
crates/sediman-tui-core/src/layout/: manager.rs  mod.rs
crates/sediman-tui-core/src/renderer/: ansi.rs  buffer.rs  cell.rs  color.rs  diff.rs  mod.rs  style.rs
crates/sediman-tui-core/src/renderer/gpu/: atlas.rs  renderer.rs
crates/sediman-tui-core/src/styling/: mod.rs  theme.rs  themes.rs
crates/sediman-tui-core/src/widgets/: banner.rs  context_bar.rs  help_overlay.rs  mod.rs  progress_panel.rs  result_panel.rs  status_bar.rs
crates/sediman-tui/src/: app.rs  config.rs  gpu_app.rs  interrupt.rs  logging.rs  main.rs  permission.rs  shell.rs  update.rs  view.rs
crates/sediman-tui/src/commands/: browser.rs  coder.rs  connect.rs  delegate.rs  doctor.rs  hub.rs  memory.rs  misc.rs  mod.rs  model.rs  plan.rs  provider.rs  record.rs  schedule.rs  sessions.rs  skills.rs  soul.rs  system.rs  terminal.rs  theming.rs
crates/sediman-tui/src/view/: banner.rs  completion.rs  input.rs  messages.rs  mod.rs  modals.rs  sidebar.rs  status_bar.rs  title_bar.rs
examples/: 01-stock-checker.md  02-daily-digest.md  03-price-monitor.md  api-usage.sh  ollama-setup.md
sandbox/: go.mod
sandbox/cmd/sediman-sandbox/: main.go
sandbox/internal/sandbox/: engine.go  engine_darwin.go  engine_linux.go  engine_stub.go
sandbox/pkg/api/: types.go
scripts/: install.sh  uninstall.sh
skills/cursor_plugins/agent-compatibility/: CHANGELOG.md  README.md
skills/cursor_plugins/cli-for-agent/: README.md
skills/cursor_plugins/create-plugin/: CHANGELOG.md  README.md
skills/cursor_plugins/cursor-sdk/: README.md
skills/cursor_plugins/docs-canvas/: CHANGELOG.md  README.md
skills/cursor_plugins/orchestrate/: .gitignore  README.md
skills/cursor_plugins/pr-review-canvas/: CHANGELOG.md  README.md
skills/cursor_plugins/pstack/: README.md
skills/cursor_plugins/ralph-loop/: README.md
skills/cursor_plugins/teaching/: README.md
skills/cursor_plugins/thermos/: CHANGELOG.md  README.md
skills/kostja94_marketing-skills/community-forum/: SKILL.md
skills/kostja94_marketing-skills/core-web-vitals/: SKILL.md
skills/kostja94_marketing-skills/eeat-signals/: SKILL.md
skills/kostja94_marketing-skills/geo/: SKILL.md
skills/kostja94_marketing-skills/google-search-console/: SKILL.md
skills/kostja94_marketing-skills/gtm/: SKILL.md
skills/kostja94_marketing-skills/howto-section/: SKILL.md
skills/kostja94_marketing-skills/indexing/: SKILL.md
skills/kostja94_marketing-skills/linkedin/: SKILL.md
skills/kostja94_marketing-skills/robots/: SKILL.md
skills/kostja94_marketing-skills/schema/: SKILL.md
skills/kostja94_marketing-skills/sitemap/: SKILL.md
skills/veniceai_skills/venice-audio-speech/: SKILL.md
src/sediman/: cli.py  config.py  display.py  errors.py  rpc_server.py  tui.py  utils.py
src/sediman/agent/: browser_agent.py  checkpoint.py  coding_agent.py  compressor.py  delegate.py  guardrails.py  interrupt.py  locales.py  loop.py  manager.py  planner.py  progress.py  recorder.py  recording_config.py  recording_manager.py  sandbox_runner.py  screen_recorder.py  skill_auditor.py  skill_learner.py  tool_dispatch.py  tools.py  trace_to_skill.py
src/sediman/api/: app.py
src/sediman/browser/: controller.py  session.py  tools.py
src/sediman/llm/: provider.py  tokens.py
src/sediman/memory/: auto_memory.py  consolidator.py  embeddings.py  importance.py  manager.py  preferences.py  providers.py  scrubber.py  sessions.py  store.py  tiers.py  trajectories.py  vector.py
src/sediman/openbrowser/: client.py  controller.py  process.py  session.py  subagent.py
src/sediman/scheduler/: cron.py
tests/: conftest.py  test_agent_browser_agent.py  test_agent_browser_agent_extended.py  test_agent_compressor.py  test_agent_delegate.py  test_agent_execution.py  test_agent_loop.py  test_agent_loop_edge_cases.py  test_agent_loop_recording.py  test_agent_manager.py  test_agent_recorder.py  test_agent_recorder_extended.py  test_agent_reflection.py  test_agent_soul_extended.py  test_agent_state.py  test_agent_tools.py  test_api_app.py  test_api_edge_cases.py  test_api_recording.py  test_browser_session_extended.py  test_chat_stream_with_tools.py  test_cli.py  test_coding_agent.py  test_coding_agent_context_compression.py  test_coding_agent_hooks.py  test_coding_agent_prompts.py  test_coding_agent_tools.py  test_coding_agent_verifier.py  test_delegate.py  test_delegate_context_isolation.py  test_display.py  test_embeddings.py  test_errors.py  test_fileops.py  test_github_installer.py  test_guardrails.py  test_hub_edge_cases.py  test_llm_provider_extended.py  test_manager_coding.py  test_manager_extended.py  (+55 more)
tests/browser/: test_controller.py  test_tools.py
tests/subagents/: test_factory.py  test_permissions.py  test_registry.py  test_result.py  test_session.py  test_template.py
(+65 files in other folders)
