[workspace]
resolver = "2"
members = [
    "crates/sediman-tui-core",
    "crates/sediman-tui-bridge",
    "crates/sediman-tui",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "BSL-1.1"
authors = ["Sediman Contributors"]

[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm", "all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

reqwest = { version = "0.13", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.29", features = ["connect"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = "0.52"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.6"
url = "2"
