[package]
name = "sediman-tui-bridge"
description = "IPC bridge to the Python Sediman API server — HTTP + WebSocket client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
url.workspace = true
