[package]
name = "sediman-tui"
description = "Sediman TUI application — Rust terminal frontend for the Sediman browser agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sediman-tui"
path = "src/main.rs"

[dependencies]
sediman-tui-core = { path = "../sediman-tui-core" }
sediman-tui-bridge = { path = "../sediman-tui-bridge" }
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
arboard.workspace = true
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
fontdue = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
dirs = "6.0.0"
toml = "1.1.2"

[features]
default = []
gpu = ["sediman-tui-core/gpu", "wgpu", "winit", "fontdue", "pollster"]
